# leetcode

./: .gitignore  Cargo.toml  README.md
problems/: run.sh
problems/0001-two-sum/: main.cpp  sample.in
problems/0002-add-two-numbers/: Cargo.toml  lib.rs  main.cpp  main.rs  sample.in
problems/0003-longest-substring-without-repeating-characters/: Cargo.toml  lib.rs  main.cpp  main.rs  sample.in
problems/0005-longest-palindromic-substring/: Cargo.toml  lib.rs  main.cpp  main.rs  sample.in
problems/0006-zigzag-conversion/: main.cpp  sample.in
problems/0007-reverse-integer/: main.cpp  sample.in
problems/0008-string-to-integer-atoi/: main.cpp  sample.in
problems/0009-palindrome-number/: main.cpp  sample.in
problems/0011-container-with-most-water/: Cargo.toml  lib.rs  main.cpp  main.rs  sample.in
problems/0012-integer-to-roman/: main.cpp  sample.in
problems/0013-roman-to-integer/: main.cpp  sample.in
problems/0014-longest-common-prefix/: main.cpp
problems/0015-3sum/: Cargo.toml  lib.rs  main.cpp  main.rs
problems/0016-3sum-closest/: main.cpp  sample.in
problems/0017-letter-combinations-of-a-phone-number/: Cargo.toml  lib.rs  main.cpp  main.rs
problems/0018-4sum/: main.cpp
problems/0019-remove-nth-node-from-end-of-list/: Cargo.toml  lib.rs  main.cpp  main.rs  sample.in
problems/0020-valid-parentheses/: Cargo.toml  lib.rs  main.cpp  sample.in
problems/0021-merge-two-sorted-lists/: Cargo.toml  lib.rs  main.cpp  sample.in
problems/0022-generate-parentheses/: Cargo.toml  lib.rs  main.cpp  main.rs
problems/0023-merge-k-sorted-lists/: Cargo.toml  lib.rs
problems/0024-swap-nodes-in-pairs/: Cargo.toml  lib.rs  main.cpp
problems/0027-remove-element/: sample.in
problems/0028-implement-strstr/: main.cpp  sample.in
problems/0029-divide-two-integers/: main.cpp  sample.in
problems/0031-next-permutation/: Cargo.toml  lib.rs  main.cpp  main.rs  sample.in
problems/0033-search-in-rotated-sorted-array/: Cargo.toml  lib.rs  main.cpp  main.rs  sample.in
problems/0034-find-first-and-last-position-of-element-in-sorted-array/: Cargo.toml  lib.rs  main.cpp  main.rs  sample.in
problems/0035-search-insert-position/: Cargo.toml  lib.rs  main.cpp
problems/0036-valid-sudoku/: main.cpp
problems/0038-count-and-say/: main.cpp
problems/0039-combination-sum/: Cargo.toml  lib.rs  main.cpp  main.rs
problems/0040-combination-sum-ii/: main.cpp
problems/0042-trapping-rain-water/: Cargo.toml  lib.rs
problems/0043-multiply-strings/: Cargo.toml  lib.rs
problems/0046-permutations/: Cargo.toml  lib.rs  main.rs
problems/0047-permutations-ii/: Cargo.toml  lib.rs
problems/0048-rotate-image/: Cargo.toml  lib.rs  main.rs
problems/0049-group-anagrams/: Cargo.toml  lib.rs  main.rs
problems/0050-powx-n/: Cargo.toml  lib.rs
problems/0053-maximum-subarray/: Cargo.toml  lib.rs  main.cpp  sample.in
problems/0054-spiral-matrix/: Cargo.toml  lib.rs
problems/0055-jump-game/: Cargo.toml  lib.rs  main.rs
problems/0056-merge-intervals/: Cargo.toml  lib.rs  main.rs
problems/0058-length-of-last-word/: main.cpp
problems/0059-spiral-matrix-ii/: Cargo.toml  lib.rs
problems/0060-permutation-sequence/: Cargo.toml  lib.rs
problems/0061-rotate-list/: Cargo.toml  lib.rs
problems/0062-unique-paths/: Cargo.toml  lib.rs  main.rs
problems/0063-unique-paths-ii/: Cargo.toml  lib.rs
problems/0064-minimum-path-sum/: Cargo.toml  lib.rs  main.rs
problems/0066-plus-one/: main.cpp  sample.in
problems/0067-add-binary/: main.cpp  sample.in
problems/0069-sqrtx/: main.cpp
problems/0070-climbing-stairs/: Cargo.toml  lib.rs  main.cpp
problems/0071-simplify-path/: Cargo.toml  lib.rs
problems/0073-set-matrix-zeroes/: Cargo.toml  lib.rs
problems/0074-search-a-2d-matrix/: Cargo.toml  lib.rs
problems/0075-sort-colors/: Cargo.toml  lib.rs  main.rs
problems/0077-combinations/: Cargo.toml  lib.rs
problems/0078-subsets/: Cargo.toml  lib.rs  main.rs
problems/0079-word-search/: Cargo.toml  lib.rs  main.rs
problems/0080-remove-duplicates-from-sorted-array-ii/: Cargo.toml  lib.rs
problems/0081-search-in-rotated-sorted-array-ii/: Cargo.toml  lib.rs
problems/0082-remove-duplicates-from-sorted-list-ii/: Cargo.toml  lib.rs
problems/0083-remove-duplicates-from-sorted-list/: main.cpp  sample.in
problems/0085-maximal-rectangle/: Cargo.toml  lib.rs
problems/0086-partition-list/: Cargo.toml  lib.rs
problems/0092-reverse-linked-list-ii/: Cargo.toml  lib.rs
problems/0095-unique-binary-search-trees-ii/: Cargo.toml  lib.rs
problems/0098-validate-binary-search-tree/: Cargo.toml  lib.rs
problems/0103-binary-tree-zigzag-level-order-traversal/: Cargo.toml  lib.rs
problems/0105-construct-binary-tree-from-preorder-and-inorder-traversal/: Cargo.toml  lib.rs
problems/0109-convert-sorted-list-to-binary-search-tree/: Cargo.toml  lib.rs
problems/0114-flatten-binary-tree-to-linked-list/: Cargo.toml  lib.rs
problems/0121-best-time-to-buy-and-sell-stock/: Cargo.toml  lib.rs  main.cpp  sample.in
problems/0150-evaluate-reverse-polish-notation/: Cargo.toml  lib.rs
problems/0166-fraction-to-recurring-decimal/: Cargo.toml  lib.rs
problems/0173-binary-search-tree-iterator/: Cargo.toml  lib.rs
problems/0199-binary-tree-right-side-view/: Cargo.toml  lib.rs
problems/0201-bitwise-and-of-numbers-range/: Cargo.toml  lib.rs
problems/0203-remove-linked-list-elements/: Cargo.toml  lib.rs  main.cpp  sample.in
problems/0211-add-and-search-word-data-structure-design/: Cargo.toml  lib.rs
problems/0215-kth-largest-element-in-an-array/: Cargo.toml  lib.rs
problems/0222-count-complete-tree-nodes/: Cargo.toml  lib.rs
problems/0230-kth-smallest-element-in-a-bst/: Cargo.toml  lib.rs
problems/0241-different-ways-to-add-parentheses/: Cargo.toml  lib.rs
problems/0304-range-sum-query-2d-immutable/: Cargo.toml  lib.rs
problems/0309-best-time-to-buy-and-sell-stock-with-cooldown/: Cargo.toml  lib.rs
problems/0374-guess-number-higher-or-lower/: Cargo.toml  lib.rs  main.cpp
problems/0380-insert-delete-getrandom-o1/: Cargo.toml  lib.rs
utils/: Cargo.toml
(+1741 files in other folders)
